--- a/serverless.yml
+++ b/serverless.yml
@@ -33,3 +33,8 @@ functions:
       - http:
           path: hello
           method: get
+
+custom:
+  bundle:
+    ignorePackages:
+      - pg-native
