--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "knex": "^0.21.1",
     "objection": "^2.2.0",
-    "pg": "^8.2.1"
+    "pg": "^8.2.1",
+    "pg-connection-string": "^2.2.3",
+    "pg-native": "^3.0.0"
   }
 }
