--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,13 @@
 # NOTE: update this with your service name
 service: strengthify-api
 
+custom:
+  bundle:
+    ignorePackages:
+      - pg-native
+    forceInclude:
+      - pg
+
 # Create an optimized package for our functions 
 package:
   individually: true
@@ -15,16 +22,9 @@ provider:
   runtime: nodejs12.x
   stage: prod
   region: us-east-1
-  # To load environment variables externally
-  # rename .env to .env and uncomment
-  # the following line. Also, make sure to not
-  # commit your .env.
-  #
   environment:
-    DATABASE_HOST: ${env:DATABASE_HOST}
-    DATABASE_USER: ${env:DATABASE_USER}
-    DATABASE_PWD: ${env:DATABASE_PWD}
-    DATABASE_DB: ${env:DATABASE_DB}
+    HEROKU_API_KEY: ${env:HEROKU_API_KEY}
+    HEROKU_POSTGRES_ID: ${env:HEROKU_POSTGRES_ID}
 
 functions:
   hello:
@@ -33,8 +33,3 @@ functions:
       - http:
           path: hello
           method: get
-
-custom:
-  bundle:
-    ignorePackages:
-      - pg-native
